--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -117,6 +117,7 @@ blockquote {
     margin-bottom: 5px;
     margin-top: 5px;
     font-family: monospace;
+    text-align: center
 
     p {
       display: inline-block;
