--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -30,7 +30,7 @@ layout: default
               alt=page.profile.image -%}
             {% endif -%}
             {%- if page.profile.address %}
-            <div class="address">
+            <div class="address" style="text-align: center;">
               {{ page.profile.address }}
             </div>
             {%- endif %}
