--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -954,3 +954,8 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
+
+// Custom CSS
+h3.pubyear {
+  margin-bottom: 30px; /* Adjust this value as needed */
+}
