--- a/_includes/news.html
+++ b/_includes/news.html
@@ -27,3 +27,4 @@
             <p>No news so far...</p>
           {%- endif %}
           </div>
+          <div style="margin-bottom: 0.5em;"></div> 
