--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -59,6 +59,18 @@ layout: default
             {%- include selected_papers.html %}
           {%- endif %}
 
+          <!-- Honors -->
+          {% if page.honors -%}
+            <h2><a href="#honors" style="color: inherit;">Selected Honors & Awards</a></h2>
+            {%- include honors.html %}
+          {%- endif %}
+
+          <!-- Professional Services -->
+          {% if page.services -%}
+            <h2><a href="#services" style="color: inherit;">Professional Services</a></h2>
+            {%- include services.html %}
+          {%- endif %}
+
           <!-- Social -->
           {%- if page.social %}
             <div class="social">
